# knowledge-base

./: .gitignore  LICENSE  LICENSE-APACHE  LICENSE-APACHE-NC  LICENSE-MIT  LICENSE-MIT-NC  README.md  download_model.py  example_gantt_data.txt  flowchart_to_drawio.py  gantt_prompt_template.txt  gantt_to_drawio.py  knowledge_base_deepseek.py  pyproject.toml  requirements-minimal.txt  requirements.txt  test_gantt_clean.drawio
build_script/: README.md  build_simple.bat  build_windows.bat  build_windows.spec  install.bat  launcher.py  使用说明-打包版.txt  打包说明.txt
docs/: API_KEY_STORAGE.md  API_TIMEOUT_FIX.md  FLOWCHART_CONVERTER.md  GANTT_CONVERTER.md  GANTT_PROMPT_TEMPLATE.md  INSTALL.md  MODEL_DOWNLOAD_GUIDE.md  PACKAGING.md  POETRY_SETUP.md  README.md  SAVE_FEATURES.md  VECTOR_DB_CLEANUP.md  WINDOWS_PACKAGING.md
scripts/: README.md  cleanup_vector_db.bat  cleanup_vector_db.sh  fix_chromadb.bat  fix_dependencies.bat  fix_dependencies.sh  fix_zstandard_install.bat  force_fix_dependencies.bat  install_dependencies.bat  install_dependencies.sh  run.bat  run.sh  setup_poetry.bat  setup_poetry.sh
